fix[pages/abouteMe/style]: gap between terminal and text

--- a/src/components/AnimatedTerminal/styles.css
+++ b/src/components/AnimatedTerminal/styles.css
@@ -18,7 +18,7 @@
     font-family: 'Courier New', monospace;
     padding: 1.5rem;
     border-radius: 10px;
-    width: 40rem;
+    min-width: 40rem;
     height: 30rem;
     margin: 0 auto;
     animation: pulse-shadow 5s ease-in-out infinite;
