--- a/src/pages/AboutMe/styles.css
+++ b/src/pages/AboutMe/styles.css
@@ -8,11 +8,10 @@
 
 .aboutme-main {
     display: flex;
-    width: 100%;
     padding: 3rem 5rem;
     align-items: center;
-    justify-content: space-between;
-    gap: 2rem
+    justify-content: center;
+    gap: 2rem;
 }
 
 .aboutme-title {
@@ -40,7 +39,8 @@
 }
 
 .aboutme-text-container {
-    width: 55rem;
+    max-width: 55rem;
+
 }
 
 .aboutme-text {
